namespaces/live.cloud-platform.service.justice.gov.uk/hdc-cvl-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hdc-cvl-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hdc_cvl_licence_integration"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Manage Custody: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hdc-cvl-prototype"
    cloud-platform.justice.gov.uk/team-name: "hdc-cvl-prototype-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
